# neocore-ledger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  mkdocs.yml  proj.md  pyproject.toml
docs/decisions/: 001-why-decimal.md  002-why-append-only.md  003-why-templates.md  004-why-payment-rail.md
examples/: payment_rail.py
neocore/: __init__.py  exceptions.py  invariants.py  money.py
neocore/ledger/: __init__.py  engine.py  models.py  store.py
neocore/scenarios/: __init__.py  payment_rail.py
neocore/templates/: __init__.py  builtins.py  engine.py  registry.py
scripts/: github_bootstrap.py
tests/: test_invariants.py  test_money.py
tests/test_ledger/: test_engine.py  test_store.py
tests/test_scenarios/: test_payment_rail.py
tests/test_templates/: test_builtins.py  test_engine.py
