[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neocore-ledger"
version = "0.1.1"
description = "A strict, append-only, Decimal-only ledger kernel for financial systems."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []
keywords = ["ledger", "double-entry", "fintech", "accounting", "idempotency"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/markinkus/NeoCore"
Repository = "https://github.com/markinkus/NeoCore"
Issues = "https://github.com/markinkus/NeoCore/issues"
Changelog = "https://github.com/markinkus/NeoCore/blob/main/CHANGELOG.md"

[project.scripts]
neocore-payment-rail = "neocore.scenarios.payment_rail:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["neocore*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
